finish arbres and start book

--- a/Setup&Exploration.ipynb
+++ b/Setup&Exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "03825804-887f-44e6-8f49-a10671863a16",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "da14fb1c-8190-4ffe-a876-cb6f22cd2648",
    "metadata": {},
    "outputs": [],
@@ -24,19 +24,25 @@
   {
    "cell_type": "markdown",
    "id": "aed7b2dc-c423-433d-812e-7fabd00a9fb9",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Initiate SparkSession"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "144c784b-934a-4cf8-96b1-f627626622f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/07/24 16:00:39 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
+     ]
+    }
+   ],
    "source": [
     "spark_session = SparkSession.builder \\\n",
     "    .appName(\"MySparkSession\") \\\n",
@@ -48,16 +54,14 @@
   {
    "cell_type": "markdown",
    "id": "0aa2992e-a92a-41b5-a4dc-28dbce1d178b",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Exlore Spark Context"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "16800239-592c-4b71-9c39-f79b51b24bbb",
    "metadata": {},
    "outputs": [
@@ -76,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "78296b6c-6948-4b63-bdd0-b24f3a2638d0",
    "metadata": {},
    "outputs": [
@@ -90,7 +94,7 @@
       "None\n",
       "manulabricole\n",
       "MySparkSession\n",
-      "local-1690201107066\n",
+      "local-1690207239678\n",
       "10\n",
       "2\n"
      ]
@@ -110,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "id": "728d1e92-a3d0-4bdd-8686-1400ddfc42d3",
    "metadata": {},
    "outputs": [
@@ -129,9 +133,7 @@
   {
    "cell_type": "markdown",
    "id": "cfcc02a0-e73b-4350-a822-102e81386333",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Play with RDD"
    ]
@@ -160,17 +162,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "4344490c-c621-4e13-bdb3-c25483ab4b39",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "[('a', 7, 7, 'a'), ('a', 2, 2, 'a'), ('b', 2, 2, 'b')]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "325881e5-1be0-40d5-9d22-5b92d0448d19",
    "metadata": {},
    "outputs": [
@@ -191,7 +200,7 @@
        "['value4', 2, 2, 'value4', 'value5', 1, 1, 'value5', 'value6', 1, 1, 'value6']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,9 +213,7 @@
   {
    "cell_type": "markdown",
    "id": "bddacd65-1707-4be3-afbd-1f79fb7aa16c",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### Dataframe"
    ]
@@ -229,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "id": "99897485-eebe-4241-91e4-040ab6da5006",
    "metadata": {},
    "outputs": [
@@ -264,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "id": "3a6cc881-6bb2-4463-bc87-bde54c19db93",
    "metadata": {},
    "outputs": [
@@ -274,7 +281,7 @@
        "10"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "id": "63f9f088-7527-4b32-a388-b7b171520b39",
    "metadata": {},
    "outputs": [
@@ -295,7 +302,7 @@
        "defaultdict(int, {'Python': 1, 'Java': 1, 'Scala': 1})"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "id": "8adfe6db-e7cf-4372-a9dd-fc65bb0e4afb",
    "metadata": {},
    "outputs": [],
@@ -324,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 49,
    "id": "cb1eb988-03be-467f-8df7-488e499ee881",
    "metadata": {},
    "outputs": [],
@@ -352,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "id": "6248fc5f-6f0d-4a4f-ab7e-ab3abb8646df",
    "metadata": {},
    "outputs": [],
@@ -362,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
    "id": "929a7fbe-8dc3-4aae-be83-d4981960263f",
    "metadata": {},
    "outputs": [],
@@ -372,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "id": "02828493-c01b-4734-9f8f-73379a97d3e2",
    "metadata": {},
    "outputs": [
@@ -382,7 +389,7 @@
        "[4, 8]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,40 +400,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "11031073-bfc5-4515-930d-8df197da1bc1",
+   "execution_count": 53,
+   "id": "85d134b8-0dd4-4d67-ae3b-9238f589f3d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# Stop the SparkSession when you're done\n",
-    "spark.stop()"
+    "ll = l*1000000\n",
+    "rdd_ll = spark_session.sparkContext.parallelize(ll)\n",
+    "mapped_rdd_ll = rdd_ll.map(lambda x: x * 2)\n",
+    "filtered_rdd_ll = mapped_rdd_ll.filter(lambda x: x % 4 == 0) # Not executed yet because not called. Just a execution plan"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "3b74c4f1-2751-4413-96cf-0b928bf0a094",
+   "execution_count": 54,
+   "id": "238ecb4c-aec3-4348-b0a1-c7c39cea6db4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'sc' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[27], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43msc\u001b[49m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'sc' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "[4, 8, 4, 8, 4, 8, 4, 8, 4, 8]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "filtered_rdd_ll.collect()[:10] # Now spark will run the filter method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "11031073-bfc5-4515-930d-8df197da1bc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Stop the SparkSession when you're done\n",
+    "spark_session.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b74c4f1-2751-4413-96cf-0b928bf0a094",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "1121d3b6-c058-4355-bca6-62e05b9dd995",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1d0453d-8e08-4cb5-8252-13c2e1a2b466",
    "metadata": {},
    "outputs": [],
    "source": []
