find words and filter

--- a/books.ipynb
+++ b/books.ipynb
@@ -3,33 +3,34 @@
   {
    "cell_type": "markdown",
    "id": "29511fb6-8298-4876-8d66-085922e1c149",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Import & Launch Session"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 70,
    "id": "933d36b3-ff00-4c15-a079-88445fb43f8d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "import nltk\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "id": "41157a86-0626-4cd1-b023-a05f6006b916",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark import SparkContext, SparkConf\n",
-    "from pyspark.sql import SparkSession, Row"
+    "from pyspark.sql import SparkSession, Row\n",
+    "from nltk.corpus import stopwords"
    ]
   },
   {
@@ -198,17 +199,292 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c7141302-80b2-4993-bb24-ac446e3b8d4f",
+   "metadata": {},
+   "source": [
+    "# Explore the book shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4a7f3cc-273e-4551-a45e-74fff8cb0cd5",
+   "metadata": {},
+   "source": [
+    "## Main infos"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "51aceb49-4456-45fd-be4e-3f7c96825513",
+   "execution_count": 33,
+   "id": "7b79fdd1-46e6-4921-ad29-d99b71aea39f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "num_lines = text_rdd.count()\n",
+    "words_rdd = text_rdd.flatMap(lambda line: line.split())\n",
+    "num_words = words_rdd.count()\n",
+    "num_distinct_words = words_rdd.distinct().count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "59376135-2d46-4b37-929e-17fbb76fc218",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Lines           -->  7422\n",
+      "Number of words           -->  52592\n",
+      "Number of Different Words -->  10264\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Number of Lines           --> \", num_lines)\n",
+    "print(\"Number of words           --> \", num_words)\n",
+    "print(\"Number of Different Words --> \", num_distinct_words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f761e2e-32d4-4df7-a34e-6a78ebfab60b",
+   "metadata": {},
+   "source": [
+    "## Theme aborded"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49569df6-e56e-4e6b-ad93-a05a3725f192",
+   "metadata": {},
+   "source": [
+    "### Top 10 words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "39eb4f13-dc99-4adc-8313-491bf978d96c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Count the occurrences of each word\n",
+    "word_counts_rdd = words_rdd.map(lambda word: (word, 1)).reduceByKey(lambda a, b: a + b)\n",
+    "# Sort the words based on their count in descending order\n",
+    "sorted_word_counts_rdd = word_counts_rdd.sortBy(lambda x: x[1], ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "69270dc0-233c-483d-96d2-4f1381b1b60e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('the', 2072), ('and', 1774), ('to', 1451), ('.', 1373), ('of', 1152), ('a', 937), ('he', 805), ('was', 762), ('his', 687), ('in', 638)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Take the first ten words from the sorted list\n",
+    "top_10_words = sorted_word_counts_rdd.take(10)\n",
+    "print(top_10_words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35f4bb33-0cb2-4cbc-9b86-e40ff3ab0bd4",
+   "metadata": {},
+   "source": [
+    "### Top 10 words filtered"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "a8269785-f6f9-45a4-9990-1a9e3511fcdd",
+   "metadata": {},
+   "source": [
+    "We use the nltk library to prevent from catching useless words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "6efc7d8c-8272-482b-90ae-2f3f5a4a941c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.tag import pos_tag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "f475c75c-0a6b-4b69-8b95-ccdd8352a9d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /Users/manulabricole/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     /Users/manulabricole/nltk_data...\n",
+      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
+      "[nltk_data]       date!\n",
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     /Users/manulabricole/nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize NLTK and download the averaged_perceptron_tagger data package\n",
+    "nltk.download(\"stopwords\")\n",
+    "nltk.download(\"averaged_perceptron_tagger\")\n",
+    "nltk.download(\"punkt\")\n",
+    "stop_words = set(stopwords.words('english'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "fcf51e9d-f055-4f09-a0a3-bbc5737458f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_pattern(word):\n",
+    "    # Define a regular expression pattern to remove unwanted characters\n",
+    "    pattern = r'[^A-Za-z0-9]'\n",
+    "    \n",
+    "    # Use re.sub to remove unwanted characters from the word\n",
+    "    cleaned_word = re.sub(pattern, '', word)\n",
+    "    \n",
+    "    return cleaned_word\n",
+    "\n",
+    "# Function to check if a word is a verb using NLTK's part-of-speech tagging\n",
+    "def is_verb(word):\n",
+    "    tagged_word = pos_tag([word])\n",
+    "    return tagged_word[0][1].startswith(\"VB\")\n",
+    "\n",
+    "# Function to filter out unwanted characters and check if a word is a verb\n",
+    "def is_valid_word(word):\n",
+    "    word = clean_pattern(word)\n",
+    "    word = word.lower()\n",
+    "    return word.isalpha() and word not in stop_words and not is_verb(word)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "f79f8114-5e5d-48cb-9d3b-ce6b17ed931e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 69:>                                                         (0 + 2) / 2]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We pass from 52592 to 20782 words ! \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "# Tokenize each line by splitting it into words, remove stop words and unwanted characters\n",
+    "words_rdd = text_rdd.flatMap(lambda line: word_tokenize(line)).filter(is_valid_word)\n",
+    "new_number = words_rdd.count()\n",
+    "print(f\"We pass from {num_words} to {new_number} words ! \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "c836b268-8b91-4d1b-a165-346ace52aeac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "# Count the occurrences of each word. reduceByKLey receive a function. \n",
+    "# For the same key, a and b are the values coming from two key value pair. We keep the common key but make the sum of the values\n",
+    "word_counts_rdd = words_rdd.map(lambda word: (word, 1)).reduceByKey(lambda a, b: a + b)\n",
+    "# Sort the words based on their count in descending order\n",
+    "sorted_word_counts_rdd = word_counts_rdd.sortBy(lambda x: x[1], ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "f06d1108-a150-4969-803f-355d6194ebc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "King: 183\n",
+      "would: 174\n",
+      "love: 146\n",
+      "Duke: 124\n",
+      "one: 111\n",
+      "man: 110\n",
+      "could: 106\n",
+      "told: 103\n",
+      "father: 88\n",
+      "like: 85\n",
+      "Project: 83\n",
+      "wife: 82\n",
+      "Claudio: 73\n",
+      "thought: 71\n",
+      "Timon: 70\n",
+      "two: 68\n",
+      "Othello: 68\n",
+      "Macbeth: 66\n",
+      "daughter: 65\n",
+      "day: 64\n"
+     ]
+    }
+   ],
+   "source": [
+    "for word, count in sorted_word_counts_rdd.take(20):\n",
+    "    print(f\"{word}: {count}\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b79fdd1-46e6-4921-ad29-d99b71aea39f",
+   "id": "26190f90-cb97-4413-a22c-dfd86be2b2f9",
    "metadata": {},
    "outputs": [],
    "source": []
